feat: implements authenticate controller
