# internal/infra/http/server/routes/auth_routes.go
@@ -9,9 +9,11 @@ import (
 func AuthRoutes(app *gin.Engine) {
 	ctn := di.GetContainer()
 	registerController := ctn.Get("registerController").(*controllers.RegisterVoterController)
+	authenticateController := ctn.Get("authenticateController").(*controllers.AuthenticateVoterController)
 
 	router := app.Group("/auth")
 	{
 		router.POST("/register", registerController.Handle)
+		router.POST("/authenticate", authenticateController.Handle)
 	}
 }
